@@ -3557,9 +3557,13 @@ ABS()
 & ACOS()
 ACOS()
 
-  FUNCTION: acos(<number>)
+  FUNCTION: acos(<number>[, <units>])
 
-  Returns the arc-cosine of <number>, expressed in radians.
+  Returns the arc-cosine of <number>, expressed in <units>.  <units> may be
+  'radians', 'degrees', or 'gradians' or just the first letter of any of
+  these. By default, <units> is 'radians'.
+
+  In a circle, there are 2*pi() radians, 360 degrees, and 400 gradians.
 
   Examples:
     > say acos(0)
@@ -3878,9 +3882,13 @@ ART()
 & ASIN()
 ASIN()
 
-  FUNCTION: asin(<number>)
+  FUNCTION: asin(<number>[, <units>])
 
-  Returns the arcsine of <number>, expressed in radians.
+  Returns the arcsine of <number>, expressed in <units>.  <units> may be
+  'radians', 'degrees', or 'gradians' or just the first letter of any of
+  these. By default, <units> is 'radians'.
+
+  In a circle, there are 2*pi() radians, 360 degrees, and 400 gradians.
 
   Examples:
     > say asin(0)
@@ -3897,9 +3905,13 @@ ASIN()
 & ATAN()
 ATAN()
 
-  FUNCTION: atan(<number>)
+  FUNCTION: atan(<number>[, <units>])
 
-  Returns the arctangent of <number>, expressed in radians.
+  Returns the arctangent of <number>, expressed in <units>.  <units> may be
+  'radians', 'degrees', or 'gradians' or just the first letter of any of
+  these. By default, <units> is 'radians'.
+
+  In a circle, there are 2*pi() radians, 360 degrees, and 400 gradians.
 
   Examples:
     > say atan(0)
@@ -4872,9 +4884,13 @@ CONVTIME()
 & COS()
 COS()
 
-  FUNCTION: cos(<number>)
+  FUNCTION: cos(<number>[, <units>])
 
-  Returns the cosine of <number>, expressed in radians.
+  Returns the cosine of <number>, expressed in <units>.  <units> may be
+  'radians', 'degrees', or 'gradians' or just the first letter of any of
+  these. By default, <units> is 'radians'.
+
+  In a circle, there are 2*pi() radians, 360 degrees, and 400 gradians.
 
   Examples:
     > say cos(0)
@@ -10105,13 +10121,17 @@ SIGN()
 & SIN()
 SIN()
 
-  FUNCTION: sin(<number>)
+  FUNCTION: sin(<number>[, <units>])
 
-  Returns the sine of <number>, expressed in radians.
+  Returns the sine of <number>, expressed in <units>.  <units> may be
+  'radians', 'degrees', or 'gradians' or just the first letter of any of
+  these. By default, <units> is 'radians'.
+
+  In a circle, there are 2*pi() radians, 360 degrees, and 400 gradians.
 
   Examples:
-    > say sin(0)
-    You say "0"
+    > say sin(270,d)
+    You say "-1"
     > say sin(fdiv(pi(),2))
     You say "1"
     > say sin(fdiv(pi(),4))
@@ -10689,9 +10709,13 @@ TAKE (continued)
 & TAN()
 TAN()
 
-  FUNCTION: tan(<number>)
+  FUNCTION: tan(<number>[, <units>])
 
-  Returns the tangent of <number>, expressed in radians.
+  Returns the tangent of <number>, expressed in <units>.  <units> may be
+  'radians', 'degrees', or 'gradians' or just the first letter of any of
+  these. By default, <units> is 'radians'.
+
+  In a circle, there are 2*pi() radians, 360 degrees, and 400 gradians.
 
   Examples:
     > say tan(0)
